0830 임우섭 : 플레이어 VR로 통일, 인풋 구조 수정, 플레이어 동작 방식수정( 이벤트 호출 서버와 클라이언트로 나눔) _2
@TODO
피격 UI, 잔탄UI, 무기는 WeaponManager에서 관리하게.
몬스터 추가 필요
무기 추가 필요

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BFA22CDB440692BF0129B7ADC7C821C2
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+Build=Always
+ForDistribution=True
+
