--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/TestLevel.TestLevel
-EditorStartupMap=/Game/Levels/TestLevel.TestLevel
+GameDefaultMap=/Game/Levels/PlayLevel.PlayLevel
+EditorStartupMap=/Game/Levels/PlayLevel.PlayLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
