--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -256,7 +256,7 @@ ManualIPAddress=
 +Profiles=(Name="WeaponGrabProfile",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="WeaponGrab",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore),(Channel="Laser",Response=ECR_Ignore),(Channel="WeaponGrabTrace"),(Channel="WeaponGrab",Response=ECR_Overlap),(Channel="PlayerTrace",Response=ECR_Ignore)),HelpMessage="Needs description")
 +Profiles=(Name="EnemyCap",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Enemy",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="PlayerTrace",Response=ECR_Ignore)),HelpMessage="Needs description")
 +Profiles=(Name="Player",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Player",CustomResponses=((Channel="Pawn",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Ignore),(Channel="Laser",Response=ECR_Ignore)),HelpMessage="Needs description")
-+Profiles=(Name="Lights",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="LigthsInteraction",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="Laser",Response=ECR_Ignore),(Channel="PlayerTrace",Response=ECR_Ignore)),HelpMessage="Needs description")
++Profiles=(Name="Lights",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="LigthsInteraction",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap),(Channel="Bullet",Response=ECR_Ignore),(Channel="Laser",Response=ECR_Ignore),(Channel="PlayerTrace",Response=ECR_Ignore)),HelpMessage="Needs description")
 +Profiles=(Name="Building",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Building",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PlayerTrace",Response=ECR_Ignore),(Channel="Building",Response=ECR_Ignore)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Enemy")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="EnemyTrace")
@@ -291,4 +291,10 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="LigthsInterction",NewName="LigthsInteraction")
+
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+DebugCanvasPaddingLeft=0.000000
+DebugCanvasPaddingRight=0.000000
+DebugCanvasPaddingTop=0.000000
+DebugCanvasPaddingBottom=0.000000
 
